# one-socket

./: .gitignore  README.rst  config.h.in  meson.build  one-socket.c
doc/: socketpair-broker-proto-spec.rst  socketpair-broker.rst
include/socketpair-broker/: helper.h  proto.h
lib/: broker.c  broker.h  polling.c  polling.h  socket-util.c  socket-util.h  socketpair-broker-helper.c  worker.c  worker.h
test/: meson.build  test-client.c
